<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:gravity="center_horizontal"
    tools:context=".ui.LoginActivity">

    <TextView
        style="@style/BrandSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/spacing_32">

        <ImageView
            android:id="@+id/iv_ilustration"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/drawkit_grape_pack_illustration_3"
            android:contentDescription="@string/illustration"
            android:layout_marginBottom="@dimen/spacing_32"/>

        <TextView
            android:id="@+id/tv_title"
            style="@style/Heading4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/spacing_8"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.storyapp.component.PrimaryField
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_8"
            android:paddingBottom="@dimen/spacing_16"
            android:inputType="textEmailAddress"
            android:alpha="0"
            app:hintText="Email"
            app:validate="true"
            android:minHeight="48dp"/>

        <com.example.storyapp.component.PrimaryField
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_16"
            android:layout_marginBottom="@dimen/spacing_24"
            android:inputType="textPassword"
            app:hintText="Password"
            app:validate="false"
            android:alpha="0"
            android:minHeight="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/primary_400"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/spacing_24"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.example.storyapp.component.PrimaryButton
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textFontWeight="600"
            android:layout_marginBottom="@dimen/spacing_24"
            android:alpha="0"
            app:text="@string/login"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_24"
            android:alpha="0"
            android:text="@string/forgot_password"/>

        <TextView
            android:id="@+id/tv_register"
            style="@style/Heading6"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textFontWeight="500"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/spacing_16"
            android:alpha="0"
            android:text="@string/register"/>
    </LinearLayout>


</LinearLayout>